Fixes the bug where product image was not covering the entire container.

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ body {
   overflow: hidden;
 }
 
+.product-img img {
+  width: 100%;
+}
+
 .content-wrapper {
   padding: 2.4rem;
 }
